<resources>
    <!--   Application-->
    <string name="app_name">TeleMed Doc</string>
    <string name="title_doctor_app">Doctors App</string>

    <!--    SignUpIFragment-->
    <string name="title_sign_up">Sign Up</string>
    <string name="title_complete_form">Please complete your email and password</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_enter_password">Enter your password</string>
    <string name="hint_confirm_password">Confirm your password</string>
    <string name="title_continue">Continue</string>
    <string name="title_cancel">Cancel</string>


    <!--    SignUpIIFragment-->

    <string name="title_personal_info">Personal info</string>
    <string name="title_doctor_name">Doctors name</string>
    <string name="title_doctor_surname">Doctors surname</string>
    <string name="title_birth_country">Birth-Country</string>
    <string name="title_nationality">Nationality</string>
    <string name="title_speciality">Speciality</string>
    <string name="title_language_one">Language 1</string>
    <string name="title_language_two">Language 2</string>
    <string name="title_gender">Gender</string>
    <string name="title_country">Country</string>
    <string name="title_state">State</string>
    <string name="title_city">City</string>
    <string name="title_address">Address</string>
    <string name="title_email">Email</string>
    <string name="title_phone">Phone No</string>


    <!--    SignUpIIIFragment-->
    <string name="title_additional_info">Additional info</string>
    <string name="title_medical_degree">Medical Degree</string>
    <string name="title_where">Where</string>
    <string name="title_other_degrees">Other Degrees</string>
    <string name="title_dea">DEA#</string>
    <string name="title_npi">NPI No</string>

    <!--    SignUpIVFragment-->
    <string name="title_bank_info">Bank info  ( PayPal )</string>
    <string name="title_routing_no">Routing Number</string>
    <string name="title_account_no">Account Number</string>
    <string name="title_post_code">Postal Code</string>

    <!--    SignUpVFragment-->
    <string name="title_attached_document">Attached document</string>
    <string name="hint_click_to_add">Add document or pdf</string>
    <string name="rationale_storage">This app needs access to your external storage so you can upload documents.</string>
    <string name="alert_upload_file">Please submit atleast one document to proceed</string>
    <string name="alert_access_denied">Permission Denied, You cannot access device data</string>


    <!--      ProfileFragment-->
    <string name="title_basic_info">Basic Info</string>
    <string name="title_save">Save</string>
    <string name="title_edit">Edit</string>


    <!--      HomeFragment -->
    <string name="title_logout">Logout</string>
    <string name="title_setting">Settings</string>
    <string name="title_notification">Notification</string>
    <string name="title_view_profile">View Profile</string>
    <string name="title_my_dashboard">My Dashboard</string>
    <string name="title_my_consults">My Consults</string>
    <string name="title_my_schedule">My Schedule</string>
    <string name="title_one">Hello, Dr.</string>
    <string name="title_two">How can we help</string>
    <string name="title_three">you today ?</string>


    <!--    MyConsultFragment-->
    <string name="estimate_time"><b> Estimate</b> \n <font size="12">2 minutes </font></string>
    <string name="last_appointment_time"><b>10/10/19</b> \n <font size="10">4:30 PM - 5:00 PM</font></string>
    <string name="header_my_consult">My Consult</string>
    <string name="title_upcoming_appointment">Upcoming Appointments</string>
    <string name="title_last_appointments">Last Appointments</string>


    <!--    MySortFragment-->

    <string name="hint_search">Search</string>


    <!--    OneTimePassword-->
    <string name="title_resend_otp">Didn\'t receive the OTP ? \n<font color='red'><b>Resend OTP</b> </font></string>
    <string name="title_please_enter">PLEASE ENTER</string>
    <string name="title_verification_code">The verification code that get from following email</string>


    <!--    SignInFragment-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_forgot_password">I forgot my password</string>
    <string name="title_log_in">Log In</string>
    <string name="sign_up">Not a user ? <b>Sign Up</b></string>


    <!--    VideoCallFragment-->
    <string name="rationale_camera_and_mic">"This app needs access to your camera and mic to make video calls "</string>
    <string name="action_ok">"OK"</string>


    <!--    SettingFragment-->
    <!--    DUMMY LIST -->
    <string-array name="array_language">
        <item>English</item>
        <item>Spanish</item>
        <item>Portuguese</item>
    </string-array>

    <string name="dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="term_and_condition">I have Read and Accept <b>Terms of Use</b> and <b>Privacy Policy</b></string>

    <string name="title_dob">Date of birth</string>
    <string name="title_birth_city">Birth - City</string>

    <!--    ChooseOptionFragment-->
    <string name="title_select_speciality">Select Speciality</string>
    <string name="title_select_city">Select City</string>
    <string name="title_select_country">Select Country</string>
    <string name="title_select_language">Select Language</string>
    <string name="title_select_gender">Select Gender</string>
    <string name="title_select_nationality">Select Nationality</string>
    <string name="title_select_state">Select State</string>


    <!--    ForgotPassword -->
    <string name="title_forgot_password_name">Forgot Password</string>
    <string name="title_send">Send</string>


    <!--    DUMMY LIST -->
    <string-array name="array_speciality">
        <item>General Surgery</item>
        <item>Cardiothoracic Surgery</item>
        <item>Vascular Surgery</item>
        <item>Cosmetic and Reconstructive Surgery</item>
        <item>Colorectal Surgery</item>
        <item>Surgical Oncology</item>
        <item>Transplant Surgery</item>
        <item>Trauma Surgery</item>
        <item>Surgical Endocrinology</item>
        <item>Orthopedic Surgery</item>
        <item>Neurosurgery</item>
        <item>Urology</item>
        <item>ENT</item>
        <item>Ophthalmology</item>
        <item>Obstetrics</item>
        <item>Gynecology</item>
        <item>Dermatology</item>
        <item>Neurology</item>
        <item>Pathology</item>
        <item>Radiology</item>
        <item>Anesthesiology</item>
        <item>Psychiatry</item>
        <item>Pediatrics</item>
        <item>Reproductive Endocrinology</item>
        <item>Gynecologic Oncology</item>
        <item>Urogynecology</item>
        <item>Hand Surgeons</item>
        <item>Shoulder Surgeons</item>
        <item>Knee Surgeons</item>
        <item>Hip Surgeons</item>
        <item>Spine Surgeons</item>
        <item>Sports Medicine</item>
        <item>Orthopedic Oncology</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_current_password">Enter current password</string>
    <string name="update">Update</string>
    <string name="back">Back</string>
</resources>
