<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".signup.view.SignUpIFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            app:srcCompat="@drawable/ic_logo_blue"
            tools:ignore="ContentDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/circular_std_medium"
            android:text="@string/title_doctor_app"
            android:textColor="@color/colorRed" />

        <include
            android:id="@+id/progress_bar"
            layout="@layout/layout_progress_bar" />
        <include
            android:id="@+id/tv_alert_view"
            layout="@layout/layout_top_alert_box" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/title_sign_up"
                android:textAlignment="center"
                android:textColor="@color/colorBlue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv__"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/title_complete_form"
                android:textAlignment="center"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold" />

            <Space
                android:id="@+id/space_empty"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/hint_enter_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:longClickable="false"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:text="parvymaan@gmail.com"
                android:textColor="@color/colorBlue"
                android:textColorHint="@color/colorLightBlue"

                app:backgroundTint="@color/colorBlue" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/hint_enter_password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:text="PARVI@1e#"
                android:textColor="@color/colorBlue"
                android:textColorHint="@color/colorLightBlue"
                app:backgroundTint="@color/colorBlue" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/hint_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:longClickable="false"
                android:maxLines="1"
                android:padding="@dimen/_10sdp"
                android:text="PARVI@1e#"
                android:textColor="@color/colorBlue"
                android:textColorHint="@color/colorLightBlue"
                app:backgroundTint="@color/colorBlue" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/rounded_background_i"
                android:paddingStart="@dimen/_40sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:text="@string/title_continue"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_text_blue"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_20sdp"
                android:longClickable="false"
                android:text="@string/title_cancel"
                android:textColor="@color/colorLightBlue" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>