<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/rl_root"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".signin.view.SignInFragment">
    <include
        android:id="@+id/tv_alert"
        layout="@layout/layout_top_alert_box" />
    <include
        android:id="@+id/progress_bar"
        layout="@layout/layout_progress_bar" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:ems="15"
        android:hint="@string/enter_current_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:focusable="true"
        android:padding="@dimen/_10sdp"
        android:text=""
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorLightBlue"
        app:backgroundTint="@color/colorBlue" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_new_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_current_password"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="Enter new  email"
        android:imeOptions="actionGo"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_10sdp"
        android:text=""
        android:textColor="@color/colorBlue"
        android:textColorHint="@color/colorLightBlue"
        app:backgroundTint="@color/colorBlue" />

    <Button
        android:id="@+id/btn_updateEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_new_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:background="@drawable/rounded_background_i"
        android:paddingStart="@dimen/_40sdp"
        android:paddingEnd="@dimen/_40sdp"
        android:text="@string/update"
        android:textAllCaps="false"
        android:textColor="@drawable/selector_text_blue"
        android:textSize="@dimen/_14sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textCancel"
        android:layout_below="@+id/btn_updateEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/title_cancel"
        android:textColor="@color/colorLightBlue"
        android:layout_marginTop="@dimen/_15sdp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_30sdp"
        app:srcCompat="@drawable/ic_logo_blue" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/circular_std_medium"
        android:text="@string/title_doctor_app"
        android:textColor="@color/colorRed" />

</RelativeLayout>