<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:orientation="vertical"
    tools:context=".signup.view.SignUpVFragment">
<!--       header layout-->
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_logo_white" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/circular_std_medium"
            android:text="@string/title_doctor_app"
            android:textColor="@color/colorWhite" />

        <include
            android:id="@+id/pb_bar"
            layout="@layout/layout_progress_bar" />

        <include
            android:id="@+id/tv_alert_view"
            layout="@layout/layout_top_alert_box" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_body"
        android:layout_below="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:text="@string/title_attached_document"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorLightBlue"
            android:textStyle="bold"
            app:backgroundTint="@color/colorWhite" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_document"
            android:overScrollMode="never"
            tools:listitem="@layout/list_item_add_file"
            tools:itemCount="5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_bottom"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_background_ii"
            android:gravity="center"
            android:paddingStart="@dimen/_40sdp"
            android:paddingEnd="@dimen/_40sdp"
            android:text="@string/title_sign_up"
            android:textAllCaps="false"
            android:textColor="@drawable/selector_text_white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/title_cancel"
            android:textColor="@color/colorLightGrey"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>

