<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlue"
    android:overScrollMode="never"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    tools:context=".profile.view.BankInfoProfileFragment">
    <!--parent -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_start_margin"
        android:layout_marginTop="@dimen/screen_top_margin"
        android:layout_marginEnd="@dimen/screen_end_padding"
        android:layout_marginBottom="@dimen/screen_bottom_margin"
        android:orientation="vertical">
        <!--            child-->
        <include
            android:id="@+id/progress_bar"
            layout="@layout/layout_progress_bar" />
        <!--            child-->
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:clickable="false"
            android:focusable="false"
            android:cursorVisible="false"
            android:layout_height="wrap_content"
            android:hint=""
            android:includeFontPadding="false"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:text="@string/title_bank_info"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorLightBlue"
            android:textStyle="bold"
            app:backgroundTint="@color/colorWhite" />
        <!--            child-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_routing_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:enabled="false"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:text=""
                    android:textColor="@color/colorLightWhite"
                    android:textColorHint="@color/colorLightBlue"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/title_routing_no"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightBlue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:enabled="false"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:text=""
                    android:textColor="@color/colorLightWhite"
                    android:textColorHint="@color/colorLightBlue"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/title_account_no"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightBlue" />
            </LinearLayout>
        </LinearLayout>

        <!--           child-->
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_addr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:text=""
                android:enabled="false"
                android:imeOptions="actionNext"
                app:backgroundTint="@color/colorWhite"
                android:includeFontPadding="false"
                android:textColorHint="@color/colorLightBlue"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:textColor="@color/colorLightWhite"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_address"
                android:includeFontPadding="false"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorLightBlue"
                android:paddingStart="@dimen/_10sdp"
                android:paddingEnd="@dimen/_10sdp"/>


        </LinearLayout>
        <!--           child-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint=""

                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:text=""
                    android:textColor="@color/colorLightWhite"
                    android:textColorHint="@color/colorLightBlue"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/title_city"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightBlue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint=""
                    android:enabled="false"
                    android:id="@+id/edt_post_code"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:padding="@dimen/_10sdp"
                    android:text=""
                    android:textColor="@color/colorLightWhite"
                    android:textColorHint="@color/colorLightBlue"
                    android:textStyle="bold"
                    app:backgroundTint="@color/colorWhite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingEnd="@dimen/_10sdp"
                    android:text="@string/title_post_code"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightBlue" />
            </LinearLayout>
        </LinearLayout>


        <!--           child-->


        <!--           child-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_continue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_background_ii"
                android:gravity="center"
                android:paddingStart="@dimen/_40sdp"
                android:paddingEnd="@dimen/_40sdp"
                android:text="@string/title_edit"
                android:visibility="gone"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_text_white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </RelativeLayout>


    </LinearLayout>


</ScrollView>

